Now able to deserialize a catalog

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,7 @@
 
 S3method(bin_name,python_tap)
 S3method(bin_path,python_tap)
-S3method(cfg_path,python_tap)
+S3method(discover,tap_stripe)
 S3method(env_name,tap_stripe)
 S3method(env_path,python_tap)
 S3method(install,python_tap)
@@ -11,6 +11,8 @@ S3method(pip_name,tap_stripe)
 S3method(pip_path,python_tap)
 S3method(pip_vers,tap_stripe)
 S3method(uninstall,python_tap)
+importFrom(checkmate,assert_character)
+importFrom(checkmate,assert_class)
 importFrom(checkmate,assert_list)
 importFrom(checkmate,assert_posixct)
 importFrom(checkmate,assert_string)
@@ -22,6 +24,7 @@ importFrom(magrittr,"%$%")
 importFrom(magrittr,"%>%")
 importFrom(magrittr,set_attr)
 importFrom(processx,run)
+importFrom(purrr,map)
 importFrom(reticulate,virtualenv_create)
 importFrom(reticulate,virtualenv_exists)
 importFrom(reticulate,virtualenv_install)
