Proof of Concept: Stripe Tap to CSV Target
This proof of concept is able to configure and run a generalized Singer Tap and pipe the output to a generalized Singer Target.

closes #2
closes #3
closes #5

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,9 +20,14 @@ Imports:
     fs,
     glue,
     jsonlite,
+    jsonvalidate,
+    lubridate,
     magrittr,
     processx,
     purrr,
+    R6,
+    readr,
     reticulate,
+    rlang,
     tibble,
     tools
